small fixes on apache2 conf

--- a/nano.conf
+++ b/nano.conf
@@ -12,7 +12,7 @@ KeepAliveTimeout 15
 
 <IfModule mpm_worker_module>
     ServerLimit                16
-    StartServers               2
+    StartServers               1
     # MinSpareThreads = StartServers x ThreadsPerChild
     MinSpareThreads            25
     MaxSpareThreads            75
@@ -21,7 +21,7 @@ KeepAliveTimeout 15
     # MaxRequestWorkers = ServerLimit x ThreadsPerChild
     MaxRequestWorkers          400
     MaxConnectionsPerChild     10240
-    GracefulShutdownTimeout    90
+    GracefulShutdownTimeout    360
 </IfModule>
 
 <IfModule dir_module>
@@ -36,7 +36,7 @@ KeepAliveTimeout 15
     DeflateCompressionLevel 4
 </IfModule>
 
-<IfModule mod_evasive20.c>
+<IfModule evasive20_module>
     DOSHashTableSize    8191
     DOSPageInterval     1
     DOSPageCount        12
@@ -47,7 +47,7 @@ KeepAliveTimeout 15
     DOSWhitelist   212.146.128.*
     DOSWhitelist   212.146.166.*
     DOSWhitelist   212.146.170.*
-    DOSWhitelist   212.146.145.*
+    DOSWhitelist   <SERVER_IP>
 </IfModule>
 
 <IfModule headers_module>
