--- a/nano.conf
+++ b/nano.conf
@@ -110,17 +110,15 @@ KeepAliveTimeout 15
 
 <IfModule security2_module>
     SecRuleEngine DetectionOnly
-    # To block attacks active this line
+    # To block attacks activate this line
     # SecRuleEngine On
 
     Include "/usr/share/modsecurity-crs/activated_rules/*.conf"
 
-    <LocationMatch ".*">
-	# Hint: Use following command to check logs before blocking
-	# grep -ao -E '\[id "[0-9]*"\].*' /var/log/apache2/modsec_audit.log | sed -n -E 's|^\[id \"([0-9]+)\"\].*\[msg \"([^\"]*)\"\].*|\1 \2|p' | sort | uniq -c
-	# Disable false positives rules server wide
-	# SecRuleRemoveById 000000 000001 000002
-    </LocationMatch>
+    # Hint: Use following command to check logs before blocking
+    # grep -ao -E '\[id "[0-9]*"\].*' /var/log/apache2/modsec_audit.log | sed -n -E 's|^\[id \"([0-9]+)\"\].*\[msg \"([^\"]*)\"\].*|\1 \2|p' | sort | uniq -c
+    # Disable false positives rules server wide
+    # SecRuleRemoveById 000000 000001 000002
 </IfModule>
 
 <Directory "/">
