--- a/nano.conf
+++ b/nano.conf
@@ -11,17 +11,33 @@ MaxKeepAliveRequests 100
 KeepAliveTimeout 15
 
 <IfModule mpm_worker_module>
-    ServerLimit                16
-    StartServers               1
-    # MinSpareThreads = StartServers x ThreadsPerChild
-    MinSpareThreads            25
-    MaxSpareThreads            75
-    ThreadLimit                30
-    ThreadsPerChild            25
-    # MaxRequestWorkers = ServerLimit x ThreadsPerChild
-    MaxRequestWorkers          400
-    MaxConnectionsPerChild     10240
+    # While restart, kill threads if not quit (seconds)
     GracefulShutdownTimeout    360
+
+    # Recycle/restart threads (connections)
+    MaxConnectionsPerChild     10240
+
+    # Max apache processes count
+    ServerLimit                20
+
+    # Processes that started in the beginning
+    StartServers               3
+
+    # Thread count for one process
+    ThreadsPerChild            30
+
+    # Max ThreadsPerChild limit that could be set with apache restart
+    # To rise beyond this limit, apache must be killed completely (stop)
+    ThreadLimit                60
+
+    # MaxRequestWorkers = ServerLimit x ThreadsPerChild
+    MaxRequestWorkers          600
+
+    # MinSpareThreads > StartServers x ThreadsPerChild
+    MinSpareThreads            100
+
+    # (2 x MinSpareThreads) < MaxSpareThreads < ((MaxRequestWorkers - MinSpareThreads) / 2)
+    MaxSpareThreads            220
 </IfModule>
 
 <IfModule dir_module>
@@ -44,10 +60,11 @@ KeepAliveTimeout 15
     DOSSiteCount        300
     DOSBlockingPeriod   3
     DOSWhitelist   127.*.*.*
-    DOSWhitelist   212.146.128.*
-    DOSWhitelist   212.146.166.*
-    DOSWhitelist   212.146.170.*
-    DOSWhitelist   <SERVER_IP>
+    #DOSWhitelist   <MAN_CLASS_1>
+    #DOSWhitelist   <MAN_CLASS_2>
+    #DOSWhitelist   <MAN_CLASS_3>
+    #DOSWhitelist   <SERVER_CLASS_1>
+    #DOSWhitelist   <SERVER_CLASS_2>
 </IfModule>
 
 <IfModule headers_module>
@@ -113,12 +130,16 @@ KeepAliveTimeout 15
     # To block attacks activate this line
     # SecRuleEngine On
 
-    Include "/usr/share/modsecurity-crs/activated_rules/*.conf"
+    SecTmpDir /run/security2_module
+    SecDataDir /run/security2_module
 
-    # Hint: Use following command to check logs before blocking
-    # grep -ao -E '\[id "[0-9]*"\].*' /var/log/apache2/modsec_audit.log | sed -n -E 's|^\[id \"([0-9]+)\"\].*\[msg \"([^\"]*)\"\].*|\1 \2|p' | sort | uniq -c
-    # Disable false positives rules server wide
-    # SecRuleRemoveById 000000 000001 000002
+    SecPcreMatchLimit 1500
+    SecPcreMatchLimitRecursion 1500
+
+    SecDebugLogLevel 3
+    SecStatusEngine Off
+
+    IncludeOptional "/usr/share/modsecurity-crs/activated_rules/*.conf"
 </IfModule>
 
 <Directory "/">
@@ -138,3 +159,8 @@ KeepAliveTimeout 15
         AllowOverride None
         Require all granted
 </Directory>
+
+# Load local conf (if exists)
+# No error trick: http://stackoverflow.com/questions/9690085
+IncludeOptional nano_local.con[f]
+
