--- a/nano.conf
+++ b/nano.conf
@@ -21,10 +21,10 @@ KeepAliveTimeout 15
 
     # MaxRequestWorkers = ServerLimit x ThreadsPerChild
     MaxRequestWorkers          600
-    # MinSpareThreads > StartServers x ThreadsPerChild
-    MinSpareThreads            100
-    # (2 x MinSpareThreads) < MaxSpareThreads < ((MaxRequestWorkers - MinSpareThreads) / 2)
-    MaxSpareThreads            220
+    # MinSpareThreads > ThreadsPerChild x 1.5
+    MinSpareThreads            45
+    # (StartServers x MinSpareThreads) < MaxSpareThreads < ((MaxRequestWorkers - MinSpareThreads) / 2)
+    MaxSpareThreads            135
 </IfModule>
 
 <IfModule dir_module>
